Add offline manifest and offline page

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,10 @@
 proxy.baseUrl=https://www.hannaford.com
 spring.thymeleaf.mode=LEGACYHTML5
 server.servlet-path=/*
+
+# Cache period for the resources served by the resource handler, in seconds.
+spring.resources.cache-period=60
+spring.resources.chain.strategy.content.enabled=true
+spring.resources.chain.strategy.content.paths=/**
+spring.resources.chain.html-application-cache=true
+spring.mvc.media-types.manifest=text/cache-manifest
