--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.resources.chain.strategy.content.enabled=true
 spring.resources.chain.strategy.content.paths=/**
 spring.resources.chain.html-application-cache=true
 spring.mvc.media-types.manifest=text/cache-manifest
+spring.mvc.media-types.ico=image/x-icon
