--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.thymeleaf.mode=LEGACYHTML5
 server.servlet-path=/*
 
 # Cache period for the resources served by the resource handler, in seconds.
+spring.resources.chain.cache=false
 spring.resources.cache-period=60
 spring.resources.chain.strategy.content.enabled=true
 spring.resources.chain.strategy.content.paths=/**
